# Intelligent-Robotics-Assignments

./: README.md
Assignment1/tiago_iaslab_simulation/: package.xml
Assignment1/tiago_iaslab_simulation/src/: client.cpp  laserScan.cpp  motionLawServer.cpp  proxy.cpp
Assignment2/tiago_iaslab_simulation/: CMakeLists.txt  package.xml
Assignment2/tiago_iaslab_simulation/action/: ClientProxy.action
Assignment2/tiago_iaslab_simulation/src/: nodeA.cpp  nodeB.cpp  proxy.cpp
Assignment2/tiago_iaslab_simulation/srv/: ObjDetection.srv
Exercise5/: CMakeLists.txt
Exercise5/src/: laserScan.cpp
assignment_1/: README.md
assignment_1/tiago_iaslab_simulation/: CMakeLists.txt
assignment_1/tiago_iaslab_simulation/action/: ClientProxy.action  ProxyMotLaw.action
assignment_1/tiago_iaslab_simulation/src/: proxyMCL.cpp
assignment_1/tiago_iaslab_simulation/srv/: ProxyDetection.srv
assignment_2/: README.md
assignment_2/tiago_iaslab_simulation/action/: PickAndPlace.action
assignment_2/tiago_iaslab_simulation/src/: laserScan.cpp  nodeA_bonus.cpp  nodeC.cpp
assignment_2/tiago_iaslab_simulation/srv/: Objs.srv  ProxyDetection.srv
exercise_5/: package.xml
